<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/map_details_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10sp" >

            <TextView
                android:id="@+id/map_details_secteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/map_details_quartier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/map_details_favoris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_detail_favoris" />

        <Button
            android:id="@+id/map_details_yaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_detail_yaller" />

        <Button
            android:id="@+id/map_details_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_detail_details" />
    </LinearLayout>

    <Button
        android:id="@+id/map_details_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_detail_close" />

</LinearLayout>