<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".LieuDetailActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="30dip"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#606060"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1.5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quartier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/secteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/lieu_detail_favoris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_favori_ajout" />
        
        <Button
            android:id="@+id/lieu_detail_yaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lieu_detail_yaller" />
        
        <Button
            android:id="@+id/lieu_detail_carte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lieu_detail_carte" />
        
    </LinearLayout>

</LinearLayout>